# HikVision-Camera-Tool

./: CMakeLists.txt  README.en.md  README.md  main.cpp  readme.md
camera/hikvision/config/: camera.yaml  camera_config.yaml
camera/hikvision/include/: MvCameraControl.h  MvErrorDefine.h  hikvision_camera.h
camera/hikvision/src/: hikvision_camera.cpp
camera/hikvision/tool/calibration/: calibrations.cpp  calibrations.h
camera/hikvision/tool/debug/: camera_parms_debug.cpp  camera_parms_debug.h
camera/hikvision/tool/include/calibration/: calibrations.h  cameraCalibration.h
camera/hikvision/tool/include/debug/: camera_parms_debug.h
camera/hikvision/tool/include/fileOperation/: fileOperation.h
camera/hikvision/tool/src/calibration/: calibrations.cpp  cameraCalibration.cpp  相机标定模块使用说明.md
camera/hikvision/tool/src/debug/: camera_parms_debug.cpp
camera/hikvision/tool/src/fileOperation/: fileOperation.cpp
